feat(user-service): add gRPC server, switch internal method to gRPC handler, update container bootstrap, config, add infra erros to gRPC errors mapping
